--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <div>
         </div>
         {% block map %}
-            {% include "defaultMap.html" %}
+            {% include "defaultMap_test.html" %}
         {% endblock %}        
     </body>
 </html>
