--- a/templates/route.html
+++ b/templates/route.html
@@ -6,7 +6,7 @@
     <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:400px" id="mySidebar">
         <div class="w3-container w3-display-container w3-padding-16">
             <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
-            <h3 class="w3-wide"><b><span class="w3-tag">Light Your</span> Way Home!</b></h3>
+            <h3 class="w3-wide"><b><span class="w3-tag">Light Your</span> Way!</b></h3>
         </div>
         <form class="w3-container" role="form" method='POST' action='index'>
           <p>
