route html update

--- a/templates/route.html
+++ b/templates/route.html
@@ -8,7 +8,7 @@
             <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
             <h3 class="w3-wide"><b><span class="w3-tag">Light Your</span> Way!</b></h3>
         </div>
-        <form class="w3-container" role="form" method='POST' action='route'>
+        <form class="w3-container" role="form" method='POST' action='next_route'>
           <p>
           <div class="form-group">          
           <label>Your location</label>          
