--- a/templates/route.html
+++ b/templates/route.html
@@ -6,7 +6,7 @@
     <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:400px" id="mySidebar">
         <div class="w3-container w3-display-container w3-padding-16">
             <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
-            <h3 class="w3-wide"><b><span class="w3-tag">Light Your</span> Way!</b></h3>
+            <h3 class="w3-wide"><b><span class="w3-tag">Take a safer</span> Way!</b></h3>
         </div>
         <form class="w3-container" role="form" method='POST' action='next_route'>
           <p>
@@ -26,7 +26,7 @@
             <div class="w3-container">
                 <div class="w3-left-align"><p><b>From</b> {{cL}}</p></div>              
                 <div class="w3-left-align"><p><b>To</b> {{tL}}</p></div> 
-                <div class="w3-left-align"><p><span style="background-color:#808080">The fastest route ({{fr_distance}}m) <b>{{fr_nlight}} streetlights.</b></span></p></div>                              
+                <div class="w3-left-align"><p>The fastest route ({{fr_distance}}m) <b>{{fr_nlight}} streetlights.</b></p></div>                              
                 <div class="w3-left-align"><p><span style="background-color:#ffff00">A brighter route ({{br_distance}}m) <b>{{br_nlight}} streetlights.</b></span></p></div>              
             </div>  
         </p>          
