--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,108 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <body>
-    <!-- Sidebar/menu -->
-    <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:400px" id="mySidebar">
-        <div class="w3-container w3-display-container w3-padding-16">
-            <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
-            <h3 class="w3-wide"><b><span class="w3-tag">Take a Better</span> Way!</b></h3>
-        </div>
-        <form class="w3-container" role="form" method='POST' action='index'>
-          <p>
-          <div class="form-group">          
-          <label>Your location</label>
-          <input class="w3-input" type="text" name="current_location" >
-          </div>
-          </p>
-          <p>
-          <div class="form-group">          
-          <label>Destination</label>
-          <input class="w3-input" type="text" name="target_location">
-          </div>
-          <button type="submit" value='NextButton'>Submit</button>          
-          </p>
-        </form>      
-        </nav> 
+<head>
+<meta charset="utf-8" />
+<title>A better way</title>
+<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+<script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+	body { margin: 0; padding: 0; }
+	#map { position: absolute; top: 0; bottom: 0; width: 75%; left: 30%}
+</style>
+</head>
+<body>
+<nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:400px" id="mySidebar">
+    <div class="w3-container w3-display-container w3-padding-16">
+        <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
+        <h3 class="w3-wide"><b><span class="w3-tag">Take a Better</span> Way!</b></h3>
+    </div>
+    <form class="w3-container" role="form" method='POST' action='index'>
+      <p>
+      <div class="form-group">          
+      <label>Your location</label>
+      <input class="w3-input" type="text" name="current_location" >
+      </div>
+      </p>
+      <p>
+      <div class="form-group">          
+      <label>Destination</label>
+      <input class="w3-input" type="text" name="target_location">
+      </div>
+      <p>
+      </p>
+      <button type="submit" value='NextButton'>Submit</button>          
+      </p>
+    </form>      
+</nav> 
 
-        <div>
-        </div>
-        {% block map %}
-            {% include "defaultMap.html" %}
-        {% endblock %}        
-    </body>
+
+<div id="map"></div>
+<script>
+	mapboxgl.accessToken = 'pk.eyJ1IjoiamFrZWpieWkiLCJhIjoiY2s2Y2VneTJjMTNxZTNtbjhuanNjeGkyciJ9.b0pkKSJC5sHWrwXENm46KA';
+    var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v11',
+        center: [-71.057083,42.361145],
+        zoom: 13
+    });
+//     if({{route_data}}!=null){
+//         document.write({{route_data}});
+//     }
+    map.on('load', function() {
+            map.addSource('route_f', {
+                'type': 'geojson',
+                'data': {
+                    'type': 'Feature',
+                    'properties': {},
+                    'geometry': {
+                        'type': 'LineString',
+                        'coordinates': {{f_route_data}}
+                    }
+                }
+            });
+            map.addSource('route_s', {
+                'type': 'geojson',
+                'data': {
+                    'type': 'Feature',
+                    'properties': {},
+                    'geometry': {
+                        'type': 'LineString',
+                        'coordinates': {{s_route_data}}
+                    }
+                }
+            });
+            map.addLayer({
+                'id': 'route_s',
+                'type': 'line',
+                'source': 'route_s',
+                'layout': {
+                    'line-join': 'round',
+                    'line-cap': 'round'
+                },
+                'paint': {
+                    'line-color': '#e6e600',
+                    'line-width': 6
+                }
+            });                                                
+
+            map.addLayer({
+                'id': 'route_f',
+                'type': 'line',
+                'source': 'route_f',
+                'layout': {
+                    'line-join': 'round',
+                    'line-cap': 'round'
+                },
+                'paint': {
+                    'line-color': '#3366ff',
+                    'line-width': 4,
+                    'line-opacity': 0.75
+                }
+            });
+    });
+</script>
+
+</body>
 </html>
