--- a/templates/route.html
+++ b/templates/route.html
@@ -47,7 +47,7 @@
                 <div class="w3-left-align"><p><span style="background-color:#ffff00"><b>A safer route</b></span></p></div>
                 <div class="w3-left-align"><p>{{s_distance}}m, {{s_nlight}} streetlights</p></div>              
                 <div class="w3-left-align"><p>{{s_nCrime}} crimes and {{s_nAccid}} accidents in the past 5 years</p></div>                              
-                <div class="w3-left-align"><p>{{incTime}} mins takes longer than the fastest route.</p></div>                              
+                <div class="w3-left-align"><p>{{incTime}} mins of additional travel time expected</p></div>                              
             </div>  
         </p>          
       
