--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
                     'line-cap': 'round'
                 },
                 'paint': {
-                    'line-color': '#e6e600',
+                    'line-color': '#C92504',
                     'line-width': 6
                 }
             });                                                
