--- a/templates/route.html
+++ b/templates/route.html
@@ -41,11 +41,11 @@
                 <div class="w3-left-align"><p> </p></div> 
                 <div class="w3-left-align"><p>------</p></div>                 
                 <div class="w3-left-align"><p><span style="background-color:#99d6ff">The fastest route</p></div>
-                <div class="w3-left-align"><p>{{f_distance}}m, {{f_nlight}} streetlights</p></div>                              
+                <div class="w3-left-align"><p>{{f_distance}} mi, {{f_nlight}} streetlights</p></div>                              
                 <div class="w3-left-align"><p>{{f_nCrime}} crimes and {{f_nAccid}} accidents in the last 5 years</p></div>                                              
                 <div class="w3-left-align"><p>------</p></div>                 
                 <div class="w3-left-align"><p><span style="background-color:#C92504"><b>A safer route</b></span></p></div>
-                <div class="w3-left-align"><p>{{s_distance}}m, {{s_nlight}} streetlights</p></div>              
+                <div class="w3-left-align"><p>{{s_distance}} mi, {{s_nlight}} streetlights</p></div>              
                 <div class="w3-left-align"><p>{{s_nCrime}} crimes and {{s_nAccid}} accidents in the last 5 years</p></div>                              
                 <div class="w3-left-align"><p>{{incTime}} mins of additional travel time expected</p></div>                              
             </div>  
